# imx6usbd

./: .gitignore  CMakeLists.txt  Findudev.cmake  README.md
include/: buffer.hpp  cerr.hpp  hidraw_dev.hpp  imxparser.hpp  sdp.hpp  udevfind.hpp  utils.hpp
src/: imx6usbd.cpp  imxparser.cpp  sdp.cpp  udevfind.cpp
